# migaku-ocr

./: .gitignore  .gitmodules  README.md  Vagrantfile  ocr_tool.py  pyproject.toml  tox.ini  windows-build.sh
.github/workflows/: main.yml
src/migaku_ocr_japanese/: main.py
