[tool.poetry]
name = "test-ocr"
version = "0.1.0"
description = ""
authors = ["Julius Dehner <julius.dehner@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pyscreenshot = "^3.0"
numpy = "^1.21.1"
pytesseract = "^0.3.8"
pyperclip = "^1.8.2"
pykakasi = "^2.2.1"
deep-translator = "^1.5.0"
gTTS = "^2.2.3"
pydub = "^0.25.1"
notify-py = "^0.3.3"
typer = "^0.3.2"
pynput = "^1.7.3"
xlib = "^0.21"
playsound = "^1.3.0"
appdirs = "^1.4.4"
SoundCard = { git = "https://github.com/bastibe/SoundCard.git", rev = "8f07897" }
scipy = "^1.7.3"
tomli = "^2.0.0"
tomli-w = "^1.0.0"
superqt = "^0.2.5"
opencv-python = "^4.5.5"
doxapy = "^0.9.1"
tesserocr = "^2.5.2"
PySide6 = "^6.2.2"
Pillow = "^9.0.0"
ImageHash = "^4.2.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pyinstaller = "^4.5.1"
flake8 = "*"
types-toml = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-logging-format = "*"
tox = "*"
pytest = "*"
flake8-executable = "*"
flake8-pytest-style = "*"
flake8-simplify = "*"
flake8-comprehensions = "*"
flake8-pie = "*"
black = "*"
appdirs-stubs = "^0.1.0"
types-Pillow = "^9.0.0"
flake8-no-implicit-concat = "^0.3.3"
flake8-tuple = "^0.4.1"
flake8-eradicate = "^1.2.0"
flake8-broken-line = "^0.4.0"
flake8-bandit = "^2.1.2"


[tool.black]
line-length = 120

# [tool.mypy]
# mypy_path = ["$MYPY_CONFIG_FILE_DIR/.venv/lib/python3.10/site-packages"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
