[tool.poetry]
name = "test-ocr"
version = "0.1.0"
description = ""
authors = ["JuliusMigaku"]
license = "gpl2"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pyscreenshot = "^3.0"
numpy = "^1.21.1"
pytesseract = "^0.3.8"
pyperclip = "^1.8.2"
deep-translator = "^1.5.0"
gTTS = "^2.2.3"
pydub = "^0.25.1"
typer = "^0.3.2"
pynput = "^1.7.3"
xlib = "^0.21"
appdirs = "^1.4.4"
scipy = "^1.7.3"
tomli = "^2.0.0"
tomli-w = "^1.0.0"
opencv-python = "^4.5.5"
doxapy = "^0.9.1"
ImageHash = "^4.2.1"
loguru = "^0.6.0"
Pillow = "^9.0.1"
mss = "^6.1.0"
PySide6 = "^6.2.4"
superqt = "^0.3.1"
soundcard = "^0.4.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pyinstaller = "^4.5.1"
flake8 = "*"
types-toml = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-logging-format = "*"
tox = "*"
pytest = "*"
flake8-executable = "*"
flake8-pytest-style = "*"
flake8-simplify = "*"
flake8-comprehensions = "*"
flake8-pie = "*"
# black = "*"
appdirs-stubs = "^0.1.0"
types-Pillow = "^9.0.0"
flake8-no-implicit-concat = "^0.3.3"
flake8-tuple = "^0.4.1"
flake8-eradicate = "^1.2.0"
flake8-broken-line = "^0.4.0"
flake8-bandit = "^2.1.2"


[tool.black]
line-length = 120


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
