[tool.poetry]
name = "test-ocr"
version = "0.1.0"
description = ""
authors = ["JuliusMigaku"]
license = "gpl2"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pyscreenshot = "^3.0"
numpy = "^1.24.1"
pytesseract = "^0.3.10"
pyperclip = "^1.8.2"
pydub = "^0.25.1"
typer = "^0.3.2"
pynput = "^1.7.3"
xlib = "^0.21"
appdirs = "^1.4.4"
scipy = "^1.7.3"
tomli = "^2.0.0"
tomli-w = "^1.0.0"
opencv-python = "^4.7.0.68"
doxapy = "^0.9.1"
imagehash = "^4.3.1"
loguru = "^0.6.0"
pillow = "^9.4.0"
mss = "^7.0.1"
superqt = "^0.4.1"
pyside6 = "^6.4.1"
soundcard = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.7.0"
mypy = "^0.910"
flake8 = "*"
types-toml = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-logging-format = "*"
tox = "*"
pytest = "*"
flake8-executable = "*"
flake8-pytest-style = "*"
flake8-simplify = "*"
flake8-comprehensions = "*"
flake8-pie = "*"
# black = "*"
appdirs-stubs = "^0.1.0"
types-Pillow = "^9.0.0"
flake8-no-implicit-concat = "^0.3.3"
flake8-tuple = "^0.4.1"
flake8-eradicate = "^1.2.0"
flake8-broken-line = "^0.4.0"
flake8-bandit = "^2.1.2"

[tool.black]
line-length = 120


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
